...
    <string name="SignUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="switchToSignUp">Don’t have an account?</string>
    <string name="switchToSignIn">Already have an account?</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="sign_in_success">Sign in success</string>
    <string name="logout">Logout</string>
    <string name="description">This is Description</string>
    <string name="tanggal">22 October</string>
    <string name="share_message">\"%1$s...\" \nRead the full story of %2$s on the Story App.</string>
    <string name="location">Jakarta, Indonesia</string>
    <string name="add_story">Add Story</string>
    <string name="next">Next</string>
...
